# reth

./: .gitignore  Cargo.toml  deny.toml  docker-bake.hcl
.changelog/: cool-hens-dance.md
.github/scripts/: bench-reth-build.sh  bench-reth-run.sh  bench-reth-snapshot.sh
.github/workflows/: bench.yml  docker.yml  scheduled-benchmarks.yml
crates/engine/execution-cache/src/: cached_state.rs
crates/engine/primitives/src/: config.rs  forkchoice.rs  message.rs
crates/engine/tree/: Cargo.toml
crates/engine/tree/src/: persistence.rs
crates/ethereum/cli/src/: app.rs
crates/ethereum/consensus/src/: lib.rs  validation.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: factory.rs  lib.rs  revmc.rs
crates/ethereum/node/: Cargo.toml
crates/ethereum/node/src/: node.rs
crates/evm/evm/: Cargo.toml
crates/evm/evm/src/: execute.rs  lib.rs
crates/node/builder/: Cargo.toml
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-convert/: Cargo.toml
crates/rpc/rpc-eth-api/: Cargo.toml
crates/storage/libmdbx-rs/: Cargo.toml
crates/transaction-pool/src/: metrics.rs
crates/trie/parallel/: Cargo.toml
crates/trie/sparse/: Cargo.toml
crates/trie/sparse/fuzz/: Cargo.toml
crates/trie/sparse/fuzz/fuzz_targets/: swarm_sparse_trie.rs  swarm_sparse_trie_arena.rs  swarm_sparse_trie_map.rs
crates/trie/sparse/fuzz/src/: driver.rs  input.rs  lib.rs  model.rs  pools.rs
crates/trie/sparse/fuzz/tests/: smoke.rs
examples/custom-evm/src/: main.rs
examples/precompile-cache/src/: main.rs
scripts/: e2e-big-blocks.sh  test-hoodi-bal-e2e.sh
(+60 files in other folders)
